--- a/My_First_Notebook.ipynb
+++ b/My_First_Notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "My First Notebook.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNWcXGXBJRH91UFGCCf5o1F",
+      "authorship_tag": "ABX9TyPM9FMCVhniKL/v13mgi2D/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,23 +48,24 @@
         "print(\"Hello World!\")\n",
         "\n",
         "x = 1 + 1\n",
-        "print(x)"
+        "y = 2 * 3\n",
+        "print(x + y)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7zX69tKh4LMu",
-        "outputId": "77333d70-65c5-444a-e5a0-a33cef18be77"
+        "outputId": "5cb51b44-5044-4cd5-e519-f7d467166c89"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello World!\n",
-            "2\n"
+            "8\n"
           ]
         }
       ]
